# temperature-finance-analysis

./: .gitignore  README.md  data.csv  pyproject.toml  temperature_cpi_1970.ipynb
