[project]
name = "temperature-finance"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab>=4.6.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "prophet>=1.3.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]
